# openworker

./: .dockerignore  .env.local.example  .gitignore  .oxlintrc.json  .prettierignore  .prettierrc.json  AGENTS.md  App.tsx  DISCRIPTION.MD  Dockerfile  OPENCLAW_FUNKTIONSANALYSE.md  README.md  TODO_DOCS_IMPROVEMENT.md  WorkerView.tsx  check-swarm.cjs  check-swarm.js  constants.ts  docker-compose.e2e.yml  docker-compose.mem0-local.yml  docker-compose.yml  eslint.config.js  index.html  metadata.json  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  proxy.ts  scheduler.ts  server.ts  tsconfig.json  tsconfig.tsbuildinfo  types.ts  undefined  undefined-shm  undefined-wal  vitest.config.ts  vitest.e2e.config.ts  (+1 more)
services/openai_worker/: pyproject.toml
services/openai_worker/app/: __init__.py  approval.py  budget.py  config.py  event_store.py  ha_lock.py  main.py  models.py  queue_policy.py  rate_limit.py  recovery.py  redaction.py  retention.py  retries.py  runner.py  security.py  state_store.py  subagents.py  telemetry.py
services/openai_worker/tests/: test_approval_pause_resume.py  test_browser_tool.py  test_browser_use_tool.py  test_budget_limits.py  test_computer_use_tool.py  test_contract_schema.py  test_event_idempotency.py  test_github_tool.py  test_ha_single_leader.py  test_health.py  test_main_all_tools_e2e.py  test_main_approval_resume_flow.py  test_mcp_tool.py  test_queue_backpressure.py  test_rate_limit.py  test_recovery_resume.py  test_redaction.py  test_retention_ttl.py  test_runner_smoke.py  test_shell_tool.py  (+6 more)
(+3004 files in other folders)
